--- a/src/app/board-selection/board-selection.component.scss
+++ b/src/app/board-selection/board-selection.component.scss
@@ -1,12 +1,48 @@
+@import '../../styles/colors.scss';
+
 :host {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
+  padding-top: 10px;
 }
 
 .empty-text {
   font-size: 24pt;
   font-style: italic;
   color: lightgray;
+}
+
+.create-board-button {
+  position: absolute;
+  bottom: 5%;
+  right: 3%;
+}
+
+.board-list-container {
+  height: 100%;
+  width: 97%;
+}
+
+.board-list-item {
+  align-items: center;
+  background-color: $secondary;
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  border-radius: 20px;
+}
+
+.board-list-item-name {
+  font-size: 16pt;
+  font-style: italic;
+  color: $primary;
+}
+
+.board-list-item-separator {
+  width: 95%;
+  height: 5px;
+  background-color: $primary;
+  border-radius: 10px;
 }
