--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,2 +1,2 @@
 <!-- TODO: Hier jetzt User hinzufügen können und dann Elemente createn können -->
-<p>board works!</p>
+<p>Im Board mit ID: {{ boardService.activeBoard()?._id }}</p>
