--- a/src/app/board-selection/board-selection.component.html
+++ b/src/app/board-selection/board-selection.component.html
@@ -11,7 +11,7 @@
             <p class="board-list-item-name">{{ board.name }}</p>
             <p class="board-list-item-member-count">Mitglieder: {{ board.allowedMembers.length }}</p>
             <p class="board-list-item-active-member-count">
-              Aktive Teilnehmende:
+              Aktiv Teilnehmende:
               <!-- TODO: hier noch die Anzahl der aktiven Mitglieder anzeigen -->
             </p>
           </div>
