move webtransport logic into its own service

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -16,7 +16,7 @@
     <mat-form-field>
       <mat-label
         >Name
-        @if (isRegistration) {
+        @if (!isRegistration) {
           oder E-Mail
         }
       </mat-label>
