--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,11 +1,13 @@
 :host {
+  display: block;
   width: 100%;
   height: 100%;
 }
 
-canvas {
+.canvas {
   width: 100%;
   height: 100%;
+  overflow: scroll;
 }
 
 .element-selection {
@@ -14,4 +16,11 @@ canvas {
   left: 0;
   right: 0;
   margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.element-button {
+  margin: 5px;
 }
