start element move impl

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,6 +1,6 @@
 <canvas class="canvas" tabindex="1" #canvas></canvas>
 <div class="element-selection">
-  @for (element of elementService.creatableElements(); track $index) {
+  @for (element of elementService.creatableElements().values(); track $index) {
     <button class="element-button" mat-flat-button (click)="createElement(element.name)">
       {{ element.name }}
     </button>
