--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -24,7 +24,7 @@
     </mat-form-field>
     <mat-form-field>
       <mat-label>Passwort</mat-label>
-      <input0 id="password-input" matInput type="password" formControlName="password" />
+      <input matInput id="password-input" matInput type="password" formControlName="password" />
     </mat-form-field>
     <button id="submit-button" class="submit-button" mat-flat-button type="submit">
       @if (isRegistration) {
