--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -34,7 +34,7 @@
       }
     </button>
   </form>
-  <button mat-button (click)="isRegistration = !isRegistration">
+  <button id="login-register-switch" mat-button (click)="isRegistration = !isRegistration">
     @if (isRegistration) {
       schon registriert?
     } @else {
