--- a/src/app/board/member-add-dialog/member-add-dialog.component.html
+++ b/src/app/board/member-add-dialog/member-add-dialog.component.html
@@ -3,7 +3,7 @@
   <p>Gib den Namen oder E-Mail des Teilnehmenden an:</p>
   <mat-form-field>
     <mat-label>Name oder E-Mail</mat-label>
-    <input matInput [(ngModel)]="nameOrEmail" required (keydown.enter)="onSubmit()" (submit)="onSubmit()" />
+    <input id="member-add-input" matInput [(ngModel)]="nameOrEmail" required (keydown.enter)="onSubmit()" (submit)="onSubmit()" />
   </mat-form-field>
   @if (nameEmpty()) {
     <p class="error-message">Bitte gib einen Namen oder eine E-Mail an</p>
@@ -11,5 +11,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="onCancel()">Abbrechen</button>
-  <button mat-flat-button (click)="onSubmit()">Erstellen</button>
+  <button id="dialog-submit" mat-flat-button (click)="onSubmit()">Erstellen</button>
 </mat-dialog-actions>
