--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,9 @@
   color: $primary;
   padding-left: 10px;
 }
+
+.appbar-subtitle {
+  color: $primary;
+  font-style: italic;
+  padding-left: 10px;
+}
