[REFAC] make create element buttons scrollable when needed

--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,8 +1,10 @@
 <canvas class="canvas" tabindex="1" #canvas></canvas>
 <div class="element-selection">
-  @for (element of elementService.creatableElements().values(); track $index; let i = $index) {
-    <button [id]="'element-button-' + i" class="element-button" mat-flat-button (click)="createElement(element.name)">
-      {{ element.name }}
-    </button>
-  }
+  <div class="inner-container">
+    @for (element of elementService.creatableElements().values(); track $index; let i = $index) {
+      <button [id]="'element-button-' + i" class="element-button" mat-flat-button (click)="createElement(element.name)">
+        {{ element.name }}
+      </button>
+    }
+  </div>
 </div>
